# MyBlog

./: .gitignore  Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml  requirements.txt
_static/: style.css
common/: urls.py
config/: settings.py  urls.py
myblog/: admin.py  models.py  tests.py  urls.py  views.py
myblog/migrations/: 0001_initial.py  0002_series_tag_alter_post_author_post_series_post_tag.py  0003_remove_post_tag_post_tag.py  0004_alter_post_category_alter_post_series_alter_post_tag.py  0005_alter_post_category.py  0006_alter_post_category_alter_post_series_alter_post_tag.py  0007_alter_series_options_article.py  0008_delete_article.py  0009_alter_post_category_alter_post_series_alter_post_tag.py
nginx/: nginx.conf
static/: consolelog.js
templates/: base.html  footer.html  header.html
templates/myblog/: about.html  archive.html  landing_post_list.html  post_detail.html
