[tool.poetry]
name = "myblog"
version = "0.1.0"
description = "blog project"
authors = ["s4ngwoo <s4ngwoo.lee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2.3"
bs4 = "^0.0.1"
beautifulsoup4 = "^4.12.2"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
